--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,11 @@
 # Your workflow name.
+#changes
 name: Deploy to heroku.
 
 # Run workflow on every push to main branch.
 on:
   push:
-    branches: [main]
+    branches: [master]
 
 # Your workflows jobs.
 jobs:
