--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,21 @@ jobs:
       - name: cicd
         uses: actions/checkout@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      
+      - name: Login to Docker Hub
+        run: echo ${{ secrets.DOCKERHUB_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+      - name: Build and push Docker image
+        run: |
+        docker buildx create --use
+        docker buildx build \
+          --file Dockerfile \
+          --tag <docker-hub-user-name>/<docker-hub-respository-name>:latest \
+          --push .
+
+
 
 ### ⬇ IMPORTANT PART ⬇ ###
 
