--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,13 +22,13 @@ jobs:
       - name: Login to Docker Hub
         run: echo ${{ secrets.DOCKERHUB_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-      - name: Build and push Docker image
-        run: |
-          docker buildx create --use
-          docker buildx build \
-            --file Dockerfile \
-            --tag <docker-hub-user-name>/<docker-hub-respository-name>:latest \
-            --push .
+      # - name: Build and push Docker image
+      #   run: |
+      #     docker buildx create --use
+      #     docker buildx build \
+      #       --file Dockerfile \
+      #       --tag <docker-hub-user-name>/<docker-hub-respository-name>:latest \
+      #       --push .
 
 
 
